# Poem-of-the-Day

./: .bazelignore  .bazelrc  .gitignore  .gitignore 2  AppStoreDescription.md  BAZEL_ARCHITECTURE.md  BAZEL_CHECKLIST.md  BAZEL_CI.md  BAZEL_MIGRATION.md  BAZEL_QUICK_REF.txt  BAZEL_SETUP_SUMMARY.md  BUILD.bazel  CLAUDE.md  FINAL_TEST_COVERAGE_REPORT.md  Gemini.md  MODULE.bazel  Makefile  Package.swift  Poem of the Day WidgetExtension.entitlements  Poem of the Day.xctestplan  README.md  TODO.md  TestPlan.xctestplan  UITestExtensions.swift  bazel-Poem of the Day  bazel-bin  bazel-out  bazel-testlogs  ci_build_log.txt  ci_log.txt  ci_log_debug.txt  ci_log_debug_10.txt  ci_log_debug_11.txt  ci_log_debug_12.txt  ci_log_debug_13.txt  ci_log_debug_14.txt  ci_log_debug_15.txt  ci_log_debug_16.txt  ci_log_debug_17.txt  ci_log_debug_18.txt  (+23 more)
.claude/: settings.local.json
.cursor/rules/: async-await-patterns.mdc  dependency-injection.mdc  error-handling.mdc  project-structure.mdc  swift-patterns.mdc  swiftui-patterns.mdc  testing-patterns.mdc  widget-development.mdc
.github/workflows/: bazel-ci.yml  blank.yml  ci.yml  release.yml
Poem of the Day/: ContentView.swift  DependencyContainer.swift  NetworkService.swift  Poem.swift  PoemError.swift  PoemGenerationService.swift  PoemRepository.swift  PoemViewModel.swift  Poem_of_the_DayApp.swift  ThemeSelectorView.swift  VibeAnalyzer.swift  VibeGenerationView.swift  VibeModels.swift
Poem of the Day Widget/: AppIntent.swift  BUILD.bazel  Info.plist  Logger.swift  Poem.swift  PoemError.swift  Poem_of_the_Day_Widget.swift  Poem_of_the_Day_WidgetBundle.swift  Poem_of_the_Day_WidgetControl.swift  Poem_of_the_Day_WidgetLiveActivity.swift  Protocols.swift  TelemetryService.swift  VibeModels.swift  WidgetTelemetryHelper.swift
Poem of the Day.xcodeproj/: project.pbxproj
Poem of the Day/Assets.xcassets/AppIcon.appiconset/: Contents.json
Poem of the Day/Core/: AppConfiguration.swift  DependencyContainer.swift  Protocols.swift  SharedModels.swift  StorageKeys.swift
Poem of the Day/Extensions/: View+Extensions.swift
Poem of the Day/Models/: Poem.swift  PoemHistory.swift  PoemHistoryEntry.swift  VibeModels.swift
Poem of the Day/Poem of the Day/: RSSFeeds.json
Poem of the Day/Resources/: RSSFeeds.json  VibeKeywords.json
Poem of the Day/Services/: AIPoemGenerator.swift  AIVibeAnalyzer.swift  LocalPoemGenerator.swift  NetworkService.swift  NewsService.swift  NotificationService.swift  PoemGenerationService.swift  PoemRepository.swift  ReviewRequestService.swift  TelemetryService.swift  VibeAnalyzer.swift  VibeKeywords.json
Poem of the Day/Utilities/: Logger.swift  TelemetryConsoleLogger.swift
Poem of the Day/ViewModels/: PoemHistoryViewModel.swift  PoemViewModel.swift
Poem of the DayTests/: NetworkServiceTests.swift  NewsServiceTests.swift  PoemGenerationServiceTests.swift  PoemRepositoryTests.swift  PoemTests.swift  PoemViewModelTests.swift  Poem_of_the_DayTests.swift  VibeAnalyzerTests.swift
Poem of the DayTests/Background/: BackgroundProcessingTests.swift
Poem of the DayTests/Core/: VibeAnalyzerTests.swift
Poem of the DayTests/EdgeCases/: EdgeCaseScenarioTests.swift
Poem of the DayTests/Integration/: ComprehensiveIntegrationTests.swift
Poem of the DayTests/Localization/: LocalizationTests.swift
Poem of the DayTests/Migration/: DataMigrationTests.swift
Poem of the DayTests/Mocks/: MockServices.swift
Poem of the DayTests/PageObjects/: PageObjects.swift
Poem of the DayTests/Performance/: AdvancedPerformanceTests.swift
Poem of the DayTests/Platform/: DevicePlatformTests.swift
Poem of the DayTests/Repositories/: PoemRepositoryTests.swift
Poem of the DayTests/Security/: SecurityInputValidationTests.swift
Poem of the DayTests/Services/: NewsServiceTests.swift
Poem of the DayTests/TestData/: TestData.swift
Poem of the DayTests/TestUtilities/: TestUtilities.swift
Poem of the DayTests/ViewModels/: PoemViewModelTests.swift
Poem of the DayUITests/: AIFeaturesUITests.swift  AccessibilityPerformanceUITests.swift  ErrorScenarioUITests.swift  PageObjects.swift  PoemUITests.swift  Poem_of_the_DayUITestsLaunchTests.swift  TelemetryUITests.swift  VibeBackgroundColorUITests.swift  WidgetUITests.swift
PoemOfTheDayTests/: BUILD.bazel  Poem_of_the_DayTests.swift
PoemOfTheDayTests/Core/: VibeAnalyzerTests.swift
PoemOfTheDayTests/History/: PoemHistoryServiceTests.swift
PoemOfTheDayTests/Localization/: LocalizationTests.swift
PoemOfTheDayTests/Mocks/: MockServices.swift
PoemOfTheDayTests/Models/: PoemErrorTests.swift  PoemHistoryEntryTests.swift  PoemTests.swift
PoemOfTheDayTests/Platform/: DevicePlatformTests.swift
PoemOfTheDayTests/Repositories/: PoemRepositoryTests.swift
PoemOfTheDayTests/Security/: SecurityInputValidationTests.swift
PoemOfTheDayTests/Services/: NetworkServiceTests.swift
PoemOfTheDayTests/TestData/: TestData.swift
PoemOfTheDayTests/ViewModels/: PoemHistoryViewModelTests.swift
PoemOfTheDayTests/Views/: PoemSourcePreferenceTests.swift
PoemOfTheDayUITests/: AIFeaturesUITests.swift  BUILD.bazel  ErrorScenarioUITests.swift  NavigationUITests.swift  PageObjects.swift  PoemUITests.swift  Poem_of_the_DayUITests.swift  Poem_of_the_DayUITestsLaunchTests.swift  ScreenshotTests.swift  TelemetryUITests.swift  VibeBackgroundColorUITests.swift  WidgetUITests.swift
scripts/: setup_widget_profile.sh  upload_secrets.sh
(+14 files in other folders)
