load("@rules_apple//apple:ios.bzl", "ios_extension")
load("@rules_swift//swift:swift.bzl", "swift_library")

# Widget Swift library
swift_library(
    name = "WidgetLib",
    srcs = glob(["**/*.swift"]),
    module_name = "PoemOfTheDayWidget",
)

# Widget extension
ios_extension(
    name = "PoemOfTheDayWidget",
    bundle_id = "Stevereitz.Poem-of-the-Day.Widget",
    families = [
        "iphone",
        "ipad",
    ],
    infoplists = ["Info.plist"],
    minimum_os_version = "17.0",
    deps = [":WidgetLib"],
)
